--- a/docs/fr/modules/main/functions/Status.tex
+++ b/docs/fr/modules/main/functions/Status.tex
@@ -84,8 +84,9 @@
         \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}    & \textbf{\color{lime}Text.conf}\\
         \hline
     \end{tabular}
-\end{justify}\setlength{\parskip}{2em}
+\end{justify}
 
+\setlength{\parskip}{2em}
 
 % -----------------------
 
@@ -252,8 +253,9 @@
         \textbf{\color{orange}p\_lineno} & Nombre entier\\
         \hline
     \end{tabular}
-\end{justify}\setlength{\parskip}{2em}
+\end{justify}
 
+\setlength{\parskip}{2em}
 % -----------------------
 
 \par\noindent\rule{\textwidth}{0.4pt}\setlength{\parskip}{1em}
